Add [GET] /tests/{testId}/votes/{questionNumber}
