# apim/apis-functions-swagger.yaml
@@ -6,6 +6,56 @@ info:
 servers:
   - url: "{API_URI}/api"
 paths:
+  /en2ja:
+    put:
+      summary: 翻訳API
+      description: 英語の各メッセージを日本語に翻訳します
+      operationId: put-en2ja
+      parameters:
+        - name: X-Access-Token
+          in: header
+          description: Microsoft ID Platformから発行されたアクセストークン
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: 英語の各メッセージ
+        content:
+          application/json:
+            schema:
+              type: array
+              description: 英語の各文章
+              items:
+                type: string
+        required: true
+      responses:
+        "200":
+          description: サーバー処理が正常終了しました
+          content:
+            application/json:
+              schema:
+                type: array
+                description: 英語の各文章を和訳した文章
+                items:
+                  type: string
+        "400":
+          description: リクエストパラメーターが不正です
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: アクセスが拒否されました
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: サーバー処理が異常終了しました
+          content:
+            application/json:
+              schema:
+                type: string
   /tests:
     get:
       summary: コース・テスト一覧取得API
@@ -220,12 +270,6 @@ paths:
                     type: string
                     description: コミュニティでのディスカッションの要約
                     nullable: true
-                  votes:
-                    type: array
-                    description: コミュニティでの回答の割合
-                    items:
-                      type: string
-                    nullable: true
                   isExisted:
                     type: boolean
                     description: コミュニティでのディスカッションの要約が存在する場合はtrue、存在しない場合はfalse
@@ -283,12 +327,6 @@ paths:
                   discussionsSummary:
                     type: string
                     description: コミュニティでのディスカッションの要約
-                    nullable: true
-                  votes:
-                    type: array
-                    description: コミュニティでの回答の割合
-                    items:
-                      type: string
                     nullable: true
                   isExisted:
                     type: boolean
@@ -835,28 +873,30 @@ paths:
             application/json:
               schema:
                 type: string
-  /en2ja:
-    put:
-      summary: 翻訳API
-      description: 英語の各メッセージを日本語に翻訳します
-      operationId: put-en2ja
+  /tests/{testId}/votes/{questionNumber}:
+    get:
+      summary: コミュニティでの回答の割合取得API
+      description: 指定したテストID・問題番号でのコミュニティでの回答の割合を取得します
+      operationId: get-votes
       parameters:
+        - name: testId
+          in: path
+          description: テストID
+          required: true
+          schema:
+            type: string
+        - name: questionNumber
+          in: path
+          description: 問題番号
+          required: true
+          schema:
+            type: integer
         - name: X-Access-Token
           in: header
           description: Microsoft ID Platformから発行されたアクセストークン
           required: true
           schema:
             type: string
-      requestBody:
-        description: 英語の各メッセージ
-        content:
-          application/json:
-            schema:
-              type: array
-              description: 英語の各文章
-              items:
-                type: string
-        required: true
       responses:
         "200":
           description: サーバー処理が正常終了しました
@@ -864,9 +904,9 @@ paths:
             application/json:
               schema:
                 type: array
-                description: 英語の各文章を和訳した文章
                 items:
                   type: string
+                description: コミュニティでの回答の割合
         "400":
           description: リクエストパラメーターが不正です
           content:
@@ -875,6 +915,12 @@ paths:
                 type: string
         "401":
           description: アクセスが拒否されました
+          content:
+            application/json:
+              schema:
+                type: string
+        "404":
+          description: 指定した問題が存在しません
           content:
             application/json:
               schema:
