# functions/type/response.py
@@ -114,11 +114,6 @@ class GetCommunityRes(TypedDict):
     コミュニティでのディスカッションの要約
     """
 
-    votes: Optional[List[str]]
-    """
-    コミュニティでの回答の割合
-    """
-
     isExisted: bool
     """
     コミュニティでのディスカッションの要約が存在する場合はtrue、存在しない場合はfalse
@@ -133,11 +128,6 @@ class PostCommunityRes(TypedDict):
     discussionsSummary: Optional[str]
     """
     コミュニティでのディスカッションの要約
-    """
-
-    votes: Optional[List[str]]
-    """
-    コミュニティでの回答の割合
     """
 
     isExisted: bool
@@ -292,4 +282,15 @@ class GetQuestionRes(TypedDict):
     isMultiplied: bool
     """
     回答が複数個の場合はtrue、回答が1個の場合はfalse
+    """
+
+
+class GetVotesRes(TypedDict):
+    """
+    [GET] /tests/{testId}/votes/{questionNumber} のレスポンスボディの型
+    """
+
+    __root__: List[str]
+    """
+    コミュニティでの回答の割合
     """
